Fix width body with overflow. Fix save with border

--- a/card_maker/src/App.css
+++ b/card_maker/src/App.css
@@ -3,8 +3,3 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-.app {
-    width: 100vw;
-    height: 100vh;
-}
