--- a/card_maker/src/index.css
+++ b/card_maker/src/index.css
@@ -1,5 +1,9 @@
 body {
     margin: 0;
+    width: 100vw;
+    height: 100vh;
+    min-width: min-content;
+    min-height: min-content;
 }
 
 .g-root {
